smart-contract-integration

--- a/config/configGoerli.json
+++ b/config/configGoerli.json
@@ -7,5 +7,6 @@
   "CURRENCY_SYMBOL": "Eth",
   "RPC": "",
   "BLOCK_EXPLORER": "",
-  "GAME_ADDRESS": ""
+  "GAME_ADDRESS": "0x9c707Af1d329bfDCcA0582f89DB97323669b58eA",
+  "PAYMENT_AMOUNT": "1"
 }
