--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "safekeep",
+  "name": "gamify",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "prettier --write \"./**/*.{json,ts,tsx}\""
   },
   "babelMacros": {
     "twin": {
@@ -19,20 +20,22 @@
     "connectkit": "^0.0.2",
     "ethers": "^5.5.1",
     "next": "^12.2.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^7.2.5",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "twin.macro": "^2.8.0",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.2"
   }
