--- a/config/configGoerli.json
+++ b/config/configGoerli.json
@@ -1,12 +1,12 @@
 {
   "APP_NAME": "Gamify",
-  "CHAIN_ID": "",
+  "CHAIN_ID": 5,
   "CHAIN_ID_DEC": "",
   "CHAIN_NAME": "",
   "CURRENCY_NAME:": "Eth",
   "CURRENCY_SYMBOL": "Eth",
   "RPC": "",
   "BLOCK_EXPLORER": "",
-  "GAME_ADDRESS": "0x9c707Af1d329bfDCcA0582f89DB97323669b58eA",
+  "GAME_ADDRESS": "0x059E7aF3c8a22a1468A4E16Ca2e53820471e6227",
   "PAYMENT_AMOUNT": "1"
 }
