--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     }
   },
   "dependencies": {
-    "axios": "^0.24.0",
     "connectkit": "^0.0.2",
+    "ethereumjs-wallet": "^1.0.2",
     "ethers": "^5.5.1",
     "next": "^12.2.5",
     "react": "^18.2.0",
